--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ click==8.1.3
 contourpy==1.0.7
 cryptography==40.0.2
 cycler==0.11.0
+decorator==5.1.1
 Flask==2.3.2
+Flask-SQLAlchemy==3.0.3
 fonttools==4.39.3
 frozendict==2.3.8
 html5lib==1.1
@@ -34,8 +36,11 @@ pytz==2023.3
 requests==2.30.0
 six==1.16.0
 soupsieve==2.4.1
+SQLAlchemy==2.0.13
+typing_extensions==4.5.0
 tzdata==2023.3
 urllib3==1.26.6
+validators==0.20.0
 webencodings==0.5.1
 Werkzeug==2.3.3
 yfinance==0.2.18
