--- a/Pipfile
+++ b/Pipfile
@@ -46,8 +46,15 @@ webencodings = "==0.5.1"
 werkzeug = "==2.3.3"
 yfinance = "==0.2.18"
 zipp = "==3.15.0"
+flask-sqlalchemy = "*"
 
 [dev-packages]
 
 [requires]
 python_version = "3.11"
+
+[pytest]
+filterwarnings =
+    error
+    ignore::UserWarning
+    ignore:function ham\(\) is deprecated:DeprecationWarning
